# sqlai

./: README.md  docker-compose.yml
engine/: .dockerignore  .gitignore  Dockerfile  README.md  build_wheels.sh  mcp_server.py  milvus.db  mysql_tbl_annot.jsonl  pyproject.toml  requirements.txt
engine/src/sqlai/: llm_service.py  qry_analyzer.py  scan_datasource.py  tbl_annotor.py  tbl_milvus.py  text_to_sql.py
engine/src/sqlai/core/: __init__.py  config.py  job_tracker.py  singleton.py
engine/src/sqlai/core/datasource/: datasource.py  datasource_manager.py  mysql.py
engine/src/sqlai/utils/: json_formatter.py  str_utils.py
engine/tests/: test_ins_milvus.py  test_mysql.py  test_qry_milvus.py  test_text2sql.py
ui/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ui/src/app/: layout.tsx  page.tsx
ui/src/app/api/connect-datasource/: route.ts
ui/src/app/api/health/: route.ts
ui/src/app/api/query/: route.ts
ui/src/app/api/scan-datasource/: route.ts
ui/src/app/api/scan-progress/: route.ts
ui/src/app/utils/: mcpUtils.ts
