[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.3",
    "mcp[cli]>=1.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sqlai"]
